--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -5,7 +5,7 @@
   <title>Registro Cuidame</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/src/assets/favicon.png">
   <script src="https://kit.fontawesome.com/4251707850.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
